[DLAB-449]: fixed issue with extra scrollbar for users column

--- a/services/self-service/src/main/resources/webapp/src/assets/styles/_theme.scss
+++ b/services/self-service/src/main/resources/webapp/src/assets/styles/_theme.scss
@@ -169,6 +169,14 @@ font-weight: 400;
       width: 96%;
     }
   }
+  .list-selected {
+    .mat-chip-list {
+      .mat-chip-list-wrapper{
+        overflow-y: auto;
+        max-height: 110px;
+      }
+    }
+  }
   .mat-reset {
     .mat-form-field-type-mat-select:not(.mat-form-field-disabled) {
       .mat-form-field-flex {
